--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ header {
     margin: 40px 0;
 }
 
-.video-section, .image-section, .info-section {
+.video-section, .info-section {
     margin-bottom: 40px;
 }
 
@@ -60,19 +60,25 @@ h2 {
     color: #3f51b5;
 }
 
-.video-section iframe, .image-section img {
+.video-section iframe{
+    width: 100%;
+    height: 500px;
+    border: none;
+}
+
+.image-section img {
     max-width: 100%;
     height: auto;
     margin: 0 auto;
 }
 
-.info-section {
+.image-container, .info-section {
     display: flex;
     justify-content: space-between;
     gap: 20px;
 }
 
-.timeline-section, .document-section {
+.image-section, .timeline-section, .document-section {
     flex: 1;
     background-color: white;
     padding: 20px;
@@ -101,13 +107,13 @@ h2 {
 footer {
     background-color: #3f51b5;
     color: white;
-    padding: 20px 0;
+    padding: 10px 0;
     border-radius: 0 0 10px 10px;
-    margin-top: 40px;
+    margin-top: 20px;
 }
 
 footer .contact-info, footer .logo {
-    margin: 10px 0;
+    margin: 5px 0;
 }
 
 footer .contact-info a {
